# KAIBAR-CHAIN

./: .gitignore  README.md  hardhat.config.js
Docs/: bizmodel.md  insuarance.md  pools.md  socialfi.md  trust.md  whitepaper.md
HEDERA PLAYGROUND/: HSS.SOL  hashscan.md  kaicent.sol  ybob.sol  ygold.sol  ytoken.sol
backend/: main.py  requirements.txt
backend/models/: agent.py  token.py  vault.py
backend/routers/: agents.py  ai.py  airdrop.py  analytics.py  vaults.py
backend/services/: airdrop_service.py  amm_engine.py  gemini_service.py  hedera_python.py  ollama_service.py  vault_strategy.py
contracts/: KAIBAAMM.sol  KAIBABonzoVault.sol  KAIBAInsurance.sol  KAIBAMoneyMarket.sol  KAIBAPension.sol  KAIBASaucerSwap.sol  KAIBAToken.sol  KAIBATrust.sol  KAIBAVault.sol  KAIBAWhitelist.sol  KaibarVault.sol
kai_bot/: .env.example  OLLAMA_SETUP.md  README.md  SKILL.md  UPLOAD_GUIDE.md  agents.py  api.py  bot.py  config.py  kai_bot.py  logger.py  ollama_models.txt  output.txt  project.json  pyproject.toml  requirements.txt  test_agent.py  test_hedera.py  test_ollama.py  test_openrouter.py  verify_agents.py
kai_bot/app/: app.js  index.html
kai_bot/modules/: airdrop_engine.py  amm_monitor.py  payments.py  qr_generator.py  scheduler.py  tokenomics.py  vault_monitor.py  wallet_registry.py
kai_bot/routers/: __init__.py  agents.py  ai.py  airdrop.py  analytics.py  hedera.py  payments.py  vaults.py
kai_bot/services/: __init__.py  ai_service.py  amm_engine.py  hedera_service.py  payment_service.py  vault_strategy.py
kai_bot/utils/: helpers.py
scripts/: deploy.js
(+23 files in other folders)
